apt-listchanges (2.75) UNRELEASED; urgency=low

  * Recode po files in utf-8 (Closes: 391014).
  * Fail gracefully if the database cannot be loaded (Closes: 444478).
  * Fail gracefully if on Ubuntu with braindead locales (Closes: 431364).

 -- Pierre Habouzit <madcoder@debian.org>  Sun, 05 Aug 2007 18:08:21 +0200

apt-listchanges (2.74) unstable; urgency=low

  * binNMUs were not shown because we tracked source packages versions, and
    not binary package ones (Closes: 423371).
  * Document apt-listchanges internals (Closes: 411075).

 -- Pierre Habouzit <madcoder@debian.org>  Mon, 18 Jun 2007 15:22:43 +0100

apt-listchanges (2.73.3) unstable; urgency=low

  * It seems that even if present, /dev/tty cannot always be opened, fall back
    to a brute force try/except block (Closes: 311919).

 -- Pierre Habouzit <madcoder@debian.org>  Fri, 11 May 2007 23:12:05 +0200

apt-listchanges (2.73.2) unstable; urgency=low

  * Only open /dev/tty if present (Closes: 311919), properly this time.

 -- Pierre Habouzit <madcoder@debian.org>  Thu, 19 Apr 2007 23:42:19 +0200

apt-listchanges (2.73.1) unstable; urgency=low

  * Only open /dev/tty if present (Closes: 311919).

 -- Pierre Habouzit <madcoder@debian.org>  Thu, 19 Apr 2007 12:07:47 +0200

apt-listchanges (2.73) unstable; urgency=low

  * Fix a problem in how configuration file is handled with ucf, thanks to
    Franck Küster (Closes: 393470, 393886, 412925).

  * Fix a problem with applications running in a terminal, thanks to Justin
    Pryzby (Closes: 343423).

  * Fix buggy man pages wrongly stating that --which=both was default whereas
    it's --which=news (Closes: 417931):
     + [es] update thanks to Martin Ferrari.
     + [it] update thanks to Francesco Pedrini.

 -- Pierre Habouzit <madcoder@debian.org>  Wed, 11 Apr 2007 01:34:18 +0200

apt-listchanges (2.72.5) unstable; urgency=low

  * Fix a typo in the preinst: .pyo -> .pyc, thanks to Marc Brockschmidt.
