@@ -3,6 +3,9 @@ apt-listchanges (2.75) UNRELEASED; urgency=low
   * Recode po files in utf-8 (Closes: 391014).
   * Fail gracefully if the database cannot be loaded (Closes: 444478).
   * Fail gracefully if on Ubuntu with braindead locales (Closes: 431364).
+  * take a patch back from Ubuntu, I'm happy their users contribute back more
+    diligently than their developpers. apt-listchanges on debian gains a new
+    gtk front-end (Closes: #451845).
 
  -- Pierre Habouzit <madcoder@debian.org>  Sun, 05 Aug 2007 18:08:21 +0200
 
